2010-03-16  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Small optimization for aliases
	* Fixed bug #6400: Unexpected behaviour when postVarsets => _DEFAULT is not set

2010-03-15  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #10348: 301 Moved Permanently with redirects and redirects_regex
	* Fixed bug #12968: Set RealURL as conflicting with simulatestatic
	* Added PHP5 access specifiers to tx_realurl and tx_realurl_advanced

2010-03-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12919: Mistyping of a sql query 'expires' instead of 'expire'
	* Preparatory work for #9858: Making slash at the end ot the path configurable
	* Fixed bug #13507: Deleted templates are included when finding rootpage_id by searching sys_template
	* Fixed bug #13018: editPathCacheEntry() attempts to update nonexistent db field in class.tx_realurl_modfunc1.php
	* Fixed bug #12992: Table "tx_realurl_uniqalias" doesn't get created on a fresh installation (MySQL)
	* Fixed bug #9025: RealUrl generates links to live version within a draft workspace preview
	* Fixed bug #12698: Empty conf[spaceCharacter] => PHP Warning "Compilation failed"
	* Fixed bug #12846: Parsing issue with DBAL

2010-01-13  Dmitry Dulepov  <dmitry.dulepov+extrealurl@gmail.com>

	* Updated documentation: described that appendMissingSlash works before any other option

2009-11-17  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12158: KEY bk_realurl02 of table tx_realurl_uniqalias is too long
	* Released version 1.7.0

2009-11-16  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12529: tx_realurl->isMultidomain called multiple times
	* Fixed bug #12445: Redirects are prepended by a slash
	* Fixed bug #12414: Add to manual that checking the is_sitroot flag is mandatory in multidomain environments
	* Fixed bug #12274: appendMissingSlash with keyword "redirect" does not correctly redirect an URL with a query part

2009-10-08  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
